--- a/bootstrap .html
+++ b/bootstrap .html
@@ -24,5 +24,52 @@
             </div>
     </div>
  </nav>
+
+ <!--centered paragraph-->
+ <div class="container text-center my-5">
+    <p class="fs-4">Welcome to my simple bootstrap layout</p>
+ </div>
+
+ <!--cards section-->
+ <div class="container">
+    <div class="row g-4">
+        <div class="col-md-4">
+            <div class="card h-100">
+                <div class="card-body text-container">
+                    <img src="group-zebras-africa_181624-23764.avif" alt="">
+                    <h5 class="card-title">card 1</h5>
+                    <p class="card-text">this is a simple card description</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card h-100">
+                <div class="card-body text-container">
+                    <img src="images.jpeg" alt="leopard">
+                    <h5 class="card-title">card 2</h5>
+                    <p class="card-text">this is another simple card description</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card h-100">
+                <div class="card-body text-container">
+                    <h5 class="card-title">card 1</h5>
+                    <p class="card-text">this is a simple card description</p>
+                </div>
+            </div>
+        </div>
+    </div>
+ </div>
+ </div>
+
+ <!--footer-->
+ <footer class="bg-dark text-white text-container py-3 mt-5">
+    <p class="mb-0">&copy; 2025 Mysite. All right reserved.</p>
+ </footer>
+
+ <!--Bootstrap js bundle-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
