--- a/bootstrap .html
+++ b/bootstrap .html
@@ -27,7 +27,7 @@
 
  <!--centered paragraph-->
  <div class="container text-center my-5">
-    <p class="fs-4">Welcome to my simple bootstrap layout</p>
+    <p class="fs-4"> <strong>Welcome to my wide life photography site</strong> </p>
  </div>
 
  <!--cards section-->
@@ -37,8 +37,8 @@
             <div class="card h-100">
                 <div class="card-body text-container">
                     <img src="group-zebras-africa_181624-23764.avif" alt="">
-                    <h5 class="card-title">card 1</h5>
-                    <p class="card-text">this is a simple card description</p>
+                    <h5 class="card-title">Zebras</h5>
+                    <p class="card-text">munching somethings into the stomach</p>
                 </div>
             </div>
         </div>
@@ -46,16 +46,17 @@
             <div class="card h-100">
                 <div class="card-body text-container">
                     <img src="images.jpeg" alt="leopard">
-                    <h5 class="card-title">card 2</h5>
-                    <p class="card-text">this is another simple card description</p>
+                    <h5 class="card-title">A cheeter</h5>
+                    <p class="card-text">cooling at the river quietly watching it's prey.</p>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card h-100">
                 <div class="card-body text-container">
-                    <h5 class="card-title">card 1</h5>
-                    <p class="card-text">this is a simple card description</p>
+                    <h5 class="card-title">polar/snow bear</h5>
+                    <img src="Screenshot_20231026-001908 (2).jpg" alt="polar bear">
+                    <p class="card-text">A Snow bear indeed.</p>
                 </div>
             </div>
         </div>
@@ -65,7 +66,7 @@
 
  <!--footer-->
  <footer class="bg-dark text-white text-container py-3 mt-5">
-    <p class="mb-0">&copy; 2025 Mysite. All right reserved.</p>
+    <p class="mb-0">&copy; 2025 Mysite. All right reserved.</p><br> No part of this should be taken to personal custody unless i'm calling the DPO on you.
  </footer>
 
  <!--Bootstrap js bundle-->
